--- a/WebChuyenDe.Common/WebChuyenDe.Common.csproj
+++ b/WebChuyenDe.Common/WebChuyenDe.Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonConst.cs" />
+    <Compile Include="PaswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
